--- a/ProjectSource/templates/index.html
+++ b/ProjectSource/templates/index.html
@@ -15,6 +15,7 @@
             <input type="text" name="username" placeholder="Username" id="username" required>
             <input type="text" name="password" placeholder="Password" id="password" required>
             <input type="submit" value="Login">
+            <div class="msg">{{ msg }}</div>
         </form>
     </div>
 </body>
