--- a/ProjectSource/templates/register.html
+++ b/ProjectSource/templates/register.html
@@ -11,10 +11,11 @@
         <form action="{{ url_for('register') }}" method="post">
             <input type="text" name="username" placeholder="Username" id="username" required>
             <input type="text" name="password" placeholder="Password" id="password" required>
+            <input type="text" name="email" placeholder="Email" id="email" required>
             <input type="text" name="first_name" placeholder="First name" id="first_name" required>
             <input type="text" name="last_name" placeholder="Last name" id="last_name" required>
             <input type="submit" value="Register account">
         </form>
-    </div>
+        <div class="msg">{{ msg }}</div>
 </body>
 </html>
