--- a/ProjectSource/templates/register.html
+++ b/ProjectSource/templates/register.html
@@ -5,7 +5,7 @@
     <style>
         body { background-color: mistyrose; }
     </style>
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}" />
 </head>
 <body>
     <div class="container">
