Added some helpful comments and fixed some small errors

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,12 @@
     </header>
     <nav class="plate"><ul class="nav-list">
         {% block nav %}
-            <li>Overwrite This</li>
+            <li>Overwrite the nav block.</li>
         {% endblock %}
     </ul></nav>
     <main class="plate">
         {% block main %}
-            <p>Overwrite This</p>
+            <p>Overwrite the main block.</p>
         {% endblock %}
     </main>
 </div></body>
