Added create task list form

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,15 +9,23 @@
 {% block main %}
     <p>Hi {{ session.first_name }} {{ session.last_name }}, your username is {{ session.username }} and your email is {{ session.email }}.</p>
     <hr />
-    <form>
+    <form action="{{ url_for('home') }}" method="post">
+        <div class="form-grid">
+            <label for="task-list-name">Enter Name:</label>
+            <input type="text" id="task-list-name" name="task-list-name" maxlength="32" required="" />
+        </div>
+        <button class="submit" name="submit" value="create">Create Task List</button>
+    </form>
+    <hr />
+    <form action="{{ url_for('home') }}" method="post">
         <div class="form-grid">
             <label for="task-lists">Task Lists:</label>
-            <select id="task-lists">
+            <select id="task-lists" name="task-list">
                 {% for list_name, list_id in lists.items() %}
                     <option value="{{ list_id }}">{{ list_name }}</option>
                 {% endfor %}
             </select>
         </div>
-        <button class="submit">Go</button>
+        <button class="submit" name="submit" value="view">View Task List</button>
     </form>
 {% endblock %}
