Removed the logout view function for a solution that is less hacky

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <h1>Home</h1>
 {% endblock %}
 {% block nav %}
-    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+    <li><a href="{{ url_for('login') }}">Log Out</a></li>
 {% endblock %}
 {% block main %}
     <p>Hi {{ session.first_name }} {{ session.last_name }}, your username is {{ session.username }} and your email is {{ session.email }}.</p>
