Corrected an error from the previous commit (add a tasklist)

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,8 @@
     <hr />
     <form action="{{ url_for('home') }}" method="post">
         <div class="form-grid">
-            <label for="task-list-name">Enter Name:</label>
-            <input type="text" id="task-list-name" name="task-list-name" maxlength="32" required="" />
+            <label for="name">Enter Name:</label>
+            <input type="text" id="name" name="task-list-id" maxlength="32" required="" />
         </div>
         <button class="submit" name="submit" value="create">Create Task List</button>
     </form>
@@ -20,9 +20,9 @@
     <form action="{{ url_for('home') }}" method="post">
         <div class="form-grid">
             <label for="task-lists">Task Lists:</label>
-            <select id="task-lists" name="task-list">
-                {% for list_name, list_id in lists.items() %}
-                    <option value="{{ list_id }}">{{ list_name }}</option>
+            <select id="task-lists" name="task-list-id">
+                {% for name, id in pairs.items() %}
+                    <option value="{{ id }}">{{ name }}</option>
                 {% endfor %}
             </select>
         </div>
