--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <form action="{{ url_for('home') }}" method="post">
         <div class="form-grid">
             <label for="name">Enter Name:</label>
-            <input type="text" id="name" name="task-list-id" maxlength="32" required="" />
+            <input type="text" id="name" name="task-list-name" maxlength="32" required="" />
         </div>
         <button class="submit" name="submit" value="create">Create Task List</button>
     </form>
