--- a/static/global.css
+++ b/static/global.css
@@ -19,11 +19,17 @@ body {
     background-image: url("desk.png");
     background-size: 100% 100%;
     background-repeat: repeat;
+    font-family: Garamond, serif;
     min-height: 100%; /* INVESTIGATE */
     padding-left: 37.5%;
     padding-right: 37.5%;
     padding-top: 2%;
     margin: 0;
+}
+
+textarea, input, button, select {
+    font-family: inherit;
+    font-size: inherit;
 }
 
 header h1 {
