--- a/static/global.css
+++ b/static/global.css
@@ -1,8 +1,22 @@
-/* honeydew mistyrose khaki */
+tr:nth-child(odd) {
+    background-color: beige;
+}
 
-html {
+tr:nth-child(even) {
+    background-color: bisque;
+}
+
+tr:first-child {
+    background-color: lemonchiffon;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+html, body {
     box-sizing: border-box;
-    overflow: clip; /* INVESTIGATE */
 }
 
 *,
@@ -16,18 +30,14 @@ html {
 }
 
 body {
+    font-family: Garamond, serif;
     background-image: url("desk.png");
     background-size: 100% 100%;
-    background-repeat: repeat;
-    font-family: Garamond, serif;
-    min-height: 100%; /* INVESTIGATE */
-    padding-left: 37.5%;
-    padding-right: 37.5%;
-    padding-top: 2%;
+    min-height: 100%;
     margin: 0;
 }
 
-textarea, input, button, select {
+input, textarea, select, button {
     font-family: inherit;
     font-size: inherit;
 }
@@ -42,10 +52,15 @@ p {
 }
 
 .container {
-    background-color: lightgray;
-    border-style: outset;
-    border-width: 10px;
-    padding: 0.25%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+    max-width: 600px;
+    padding: 0.5%;
+    margin-top: 1%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .plate {
@@ -55,8 +70,8 @@ p {
     padding: 1%;
 }
 
-.plate + .plate {
-    margin-top: 1%;
+.plate:not(:first-child) {
+    margin-top: 0.5%;
 }
 
 .nav-list {
@@ -67,19 +82,6 @@ p {
     padding: 0%;
     margin: 0%;
 }
-
-/* .nav-list li { */
-    /* width: 50%; */
-    /* border-style: solid; */
-    /* border-color: orange; */
-    /* border-width: 1px; */
-/* } */
-
-/* .nav-list li a { */
-    /* display: block; */
-    /* width: 100%; */
-    /* text-align: center; */
-/* } */
 
 .form-grid {
     display: grid;
