--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,11 @@
             <h1>Chores % Tasks</h1>
         {% endblock header %}
     </header>
-    <nav class="plate"><ul class="nav-list">
+    <nav class="plate">
         {% block nav %}
             <li>Overwrite the nav block.</li>
         {% endblock %}
-    </ul></nav>
+    </nav>
     <main class="plate">
         {% block main %}
             <p>Overwrite the main block.</p>
