--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 
+<!-- Header -->
 {% block header %}
     <h1>Login</h1>
 {% endblock %}
+
+<!-- Navigation -->
 {% block nav %}
-    <li>Log In</li>
-    <li><a href="{{ url_for('register') }}">Register</a></li>
+    Log In
+    <a href="{{ url_for('register') }}">Register</a>
 {% endblock %}
+
+<!-- Main -->
 {% block main %}
     <form action="{{ url_for('login') }}" method="post">
         <div class="form-grid">
