--- a/static/global.css
+++ b/static/global.css
@@ -28,7 +28,7 @@ input, textarea, select, button {
     border-style: solid;
     border-width: 1px;
     border-color: rgba(255, 255, 255, 0.6);
-    max-width: 500px;
+    max-width: 450px;
     padding: 0.5%;
     margin-left: auto;
     margin-right: auto;
@@ -80,6 +80,11 @@ form > .actions {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 1%;
+}
+
+form > .actions > button {
+    flex: 1;
 }
 
 button.larger {
@@ -87,17 +92,16 @@ button.larger {
     padding-top: 1%;
 }
 
-.fields + .actions {
-    margin-top: 1%;
+.task-list.plate {
+    padding: 0;
 }
 
 table.task-list {
+    table-layout: fixed;
     border-style: outset;
     border-width: 1px;
     border-spacing: 0;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /* Can't get it to only target tr's that are the direct child */
@@ -111,6 +115,9 @@ table.task-list tr:nth-of-type(even) {
 }
 
 table.task-list th, table.task-list td {
+    word-break: break-word;
     border-style: inset;
     border-width: 1px;
 }
+
+/* table.task-list tr td:nth-of-type(1) {} */
