--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 <!-- Header Plate -->
 {% block header_plate %}
-    <h1>Home</h1>
+    <h1>Task List Settings</h1>
 {% endblock %}
 
 <!-- Main -->
@@ -10,27 +10,66 @@
     <nav class="plate">
         <a href="{{ url_for('login') }}">Log Out</a>
     </nav>
+    {% if msg %}
+    <p class="warning plate">
+        {{ msg }}
+    </p>
+    {% endif %}
     <p class="plate">Hi {{ session.first_name }} {{ session.last_name }}, your username is {{ session.username }} and your email is {{ session.email }}.</p>
+    <form class="plate" action="{{ url_for('home') }}" method="post">
+        <div class="fields">
+            <label for="task-lists">Task List:</label>
+            <select id="task-lists" name="task-list-id" required="">
+                {% for name, id in view_pairs.items() %}
+                    <option value="{{ id }}">{{ name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="actions">
+            <button class="larger" name="submit" value="view">View</button>
+        </div>
+    </form>
     <form class="plate" action="{{ url_for('home') }}" method="post">
         <div class="fields">
             <label for="name">Enter Name:</label>
             <input type="text" id="name" name="task-list-name" maxlength="32" required="" />
         </div>
         <div class="actions">
-            <button class="larger" name="submit" value="create">Create Task List</button>
+            <button class="larger" name="submit" value="create">Create</button>
         </div>
     </form>
     <form class="plate" action="{{ url_for('home') }}" method="post">
         <div class="fields">
-            <label for="task-lists">Task Lists:</label>
+            <label for="task-lists">Task List:</label>
             <select id="task-lists" name="task-list-id" required="">
-                {% for name, id in pairs.items() %}
+                {% for name, id in delete_pairs.items() %}
                     <option value="{{ id }}">{{ name }}</option>
                 {% endfor %}
             </select>
         </div>
         <div class="actions">
-            <button class="larger" name="submit" value="view">View Task List</button>
+            <button class="larger" name="submit" value="delete">Delete</button>
+        </div>
+    </form>
+    <form class="plate" action="{{ url_for('home') }}" method="post">
+        <div class="fields">
+            <label for="task-lists">Task List:</label>
+            <select id="task-lists" name="task-list-id" required="">
+                {% for name, id in delete_pairs.items() %}
+                    <option value="{{ id }}">{{ name }}</option>
+                {% endfor %}
+            </select>
+            <label for="user-type">User Type:</label>
+            <select id="user-type" name="user-type" required="">
+                <option value="parent">Parent</option>
+                <option value="child">Student</option>
+                <option value="guardian">Teacher</option>
+            </select>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" maxlength="32" required="" />
+        </div>
+        <div class="actions">
+            <button class="larger" name="submit" value="share">Share</button>
         </div>
     </form>
 {% endblock %}
