--- a/templates/tasklist.html
+++ b/templates/tasklist.html
@@ -10,6 +10,9 @@
     <nav class="plate">
         <a href="{{ url_for('home') }}">Back</a>
     </nav>
+    <p class="plate">
+        You are a {{ user_type }}!
+    </p>
     {% if tasks %}
     <table class="task-list plate">
         <tr>
